fix spacing in h2

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -102,7 +102,6 @@ h1 {
 }
 
 h2 {
-  margin-top: 1rem;
   font-size: 1.25rem;
 }
 
